--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "outDir": "./dist",
     "rootDir": "./src"
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*", "generated/client/**/*"],
+    "exclude": ["node_modules"]
 }
-    
