--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "rootDir": "./src"
     },
     "include": ["src/**/*", "generated/client/**/*"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist", "generated"]
 }
